homework-1-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment-node
spec:
    replicas: 3
    selector:
       matchLabels:
          app: hello-demo-node
    template:
       metadata:
          labels:
             app: hello-demo-node
       spec:
          containers:
          - name: otushomework-node
            image: sinitsynva/otus-homework:v6-node
            ports:
              - name: web
                containerPort: 70
