homework-1-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-node
spec:
  selector:
    app: hello-demo-node
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
