homework-1-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-node
   annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-service-node
              port:
                number: 8000
